Lightmode fix for non firefox browsers

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: 255 255 255; 
-  --foreground: 227 18% 13%; 
+  --background: 0 0% 100%; /* White */ 
+  --foreground: 0 0% 0%; /* Black */ 
   --header-background: 214.3 31.8% 91.4%; 
   --card: 214.3 31.8% 91.4%;
   --card-foreground: 222.2 47.4% 11.2%; 
@@ -27,8 +27,8 @@
 }
 
 .dark {
-  --background: 227 18% 13%;
-  --foreground: 0 0% 100%;  
+  --background: 227 18% 13%; /* Dark blue/gray */
+  --foreground: 0 0% 100%; /* White */  
   --header-background: 225 18% 19%;
   --card: 225 18% 19%; 
   --card-foreground: 0 0% 100%;
